Change for local test
This test uses a 2-peers network setup locally.
This network is setup using docker-compose file
of car-release demo.

--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
    "chainName":"hello-world",
-   "deployWaitTime":"60",
+   "deployWaitTime":"300",
+   "invokeWaitTime": "60",
    "user": {
 	"username": "JohnDoe",
-        "affiliation" : "group1"
+        "affiliation" : "bank_a"
    },
    "deployRequest":{
       "chaincodePath":"chaincode",
